[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "mt-sdk"
description = "MT SDKs APIMatic"
version = "0.0.2"
readme = "README.md"
keywords = []
dependencies = ["apimatic-core~=0.2.0, >= 0.2.24", "apimatic-core-interfaces~=0.1.0, >= 0.1.8", "apimatic-requests-client-adapter~=0.1.0, >= 0.1.10", "python-dotenv>=0.21, <2.0"]
classifiers = []
requires-python = ">=3.7"
[[project.authors]]
name = "Muhammad Rafay"
email = "muhammad.rafay@apimatic.io"

[project.urls]
Documentation = "https://www.moderntreasury.com/?utm_source=google&utm_medium=ppc&utm_campaign=&utm_content=169294787899&utm_term=&hsa_acc=9452648776&hsa_cam=21819247407&hsa_grp=169294787899&hsa_ad=717856558505&hsa_src=g&hsa_tgt=kwl-3500001&hsa_kw=&hsa_mt=a&hsa_net=adwords&hsa_ver=3&gad_source=1&gad_campaignid=21819247407&gbraid=0AAAAAC2R_wBaJpG0S4ymnCuEjxmibrT_s&gclid=Cj0KCQjw_vnQBhCxARIsADcZyxLbDIUqLBHj8kibLedgEbqmbBUMSGdoRn7au3zjNSQupu551HjzkY4aAiJeEALw_wcB"
[project.optional-dependencies]
testutils = ["pytest>=7.2.2"]
[tool]
[tool.setuptools]
[tool.setuptools.packages]
[tool.setuptools.packages.find]
exclude = ["tests", "tests.*"]
